# LearningWeb

./: .gitignore  docker-compose.yml
Backend/: Dockerfile  pyproject.toml
Backend/alimbic/: env.py
Backend/app/: __init__.py  main.py
Backend/app/database/: database.py
Backend/app/database/models/: User.py  crud.py
Backend/app/models/: users.py
Backend/app/routes/: auth.py  crud.py  login.py
Backend/app/schemas/: __init__.py
Backend/app/settings/: ConfigDB.py  __int__.py  settings.py
Backend/app/utils/: HashUtils.py  JwtUtils.py
Backend/auth/: exceptions.py  main.py  utils.py
Backend/auth/app/: dependencies.py  exceptions.py  main.py
Backend/auth/app/core/: config.py  database.py  security.py
Backend/auth/app/models/: User.py
Backend/auth/app/routes/: crud.py  login.py
Backend/auth/app/schemas/: __init__.py
Backend/auth/app/services/: helpers.py
Backend/auth/core/: config.py  database.py  security.py
Backend/auth/database/models/: User.py
Backend/auth/models/: User.py
Backend/auth/routes/: crud.py  login.py
Backend/auth/schemas/: __init__.py
Backend/auth/settings/: dictConfig.py  log.py
Backend/auth/tests/: testAuth.py
Backend/monitoring/: Dockerfile
Backend/notification/: Dockerfile
Backend/notification/app/: main.py
Backend/tests/: testAuth.py  testConnection.py
frontend/: package-lock.json  package.json
frontend/src/components/: DataParser.jsx
frontend/src/website/: App.jsx  App.scss
