[project]
name = "backend"
version = "0.1.0"
description = "This My Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastapi-jwt-auth>=0.5.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
